<resources>
    <string name="app_name">Zemulla</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="signup">Open An Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="signup_msg">Don\'t have an account? Signup</string>
    <string name="forgot_pass_msg">Forgot Password?</string>
    <string name="create_account_msg">Create an Account</string>
    <string name="action_history">Transaction History</string>
    <string name="action_refresh">Refresh Balance</string>

    <string name="hint_fname">First Name</string>
    <string name="hint_lname">Last Name</string>
    <string name="hint_subject">Subject</string>
    <string name="hint_email">Email</string>
    <string name="hint_transaction_number">Zemulla Transaction Number</string>
    <string name="phone_Number">Phone Number</string>
    <string name="hint_description">Description</string>

    <string name="hint_country">Country Name</string>
    <string name="hint_state">State Name</string>
    <string name="hint_city">City Name</string>

    <string name="hint_pass">Password</string>
    <string name="old_hint_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="hint_cnf_pass">Confirm Password</string>

    <string name="hint_old_email">Old Email</string>
    <string name="hint_new_email">New Email</string>
    <string name="hint_current_password">Current Password</string>

    <string name="hint_add">Address</string>
    <string name="hint_zipcode">ZipCode</string>


    <string-array name="colors">
        <item>#b71c1c</item>
        <item>#880E4F</item>
        <item>#4A148C</item>
        <item>#311B92</item>
        <item>#1A237E</item>
        <item>#0D47A1</item>
    </string-array>

    <string name="select_recipient_bank_prompt">Select Recipient Bank</string>
    <string name="select_provider_prompt">Select Provider</string>
    <string name="select_provider_product">Select Product</string>
    <string name="select_plan_prompt">Select Plan</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_bank_name">Bank Name</string>
    <string name="hint_account_name">Account Name</string>
    <string name="hint_account_number">Account Number</string>
    <string name="hint_barnch_name">Branch Name</string>
    <string name="hint_swift_code">Swift Code</string>

    <string name="textDigits">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz</string>

    <string name="numberDigits">0123456789</string>

    <string-array name="items_PDF">
        <item>Take Photo</item>
        <item>Choose from Gallery</item>
        <item>PDF</item>
    </string-array>

    <string-array name="items">
        <item>Take Photo</item>
        <item>Choose from Gallery</item>
    </string-array>

    <string-array name="contact_us">
        <item>General</item>
    </string-array>

    <string name="static_meter_info">Name : JACKSON MZEY\n\nAddress : 12747 PMPAKAS STREET,SITE AND SERVICE-1214,3484723\n\nOther Details : JACKSON MZEY 12747 PMPAKAS STREET, SITE AND SERVICE-1214, 3484723 ZESCO\n</string>

    <string name="try_agian">Error while procesing. Please try after sometime.</string>

    <string name="paypal_client_id">AYoYhvUgiTrWJt_CF1QnY0B8vlqSfE5EvHDEo9ZtkKjvursSb6kmh6uQtKoJP_Zde_9RoW8SnzzQ56BU</string>
    <string name="paypal_secret_id">EOCyRt9JVvOHBogO7bZihoUJBVmWl9QILK32ljQE-CC0aYY2OdIaEeKJEFlEweHla9c6io9M9Iww8oTR</string>


    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="LOADING">Loading...</string>
    <string name="Select_Provider">Select Provider</string>
    <string name="title_activity_emarket_transaction">EmarketTransactionActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="notification">Notifications</string>
    <string name="errorMsg">Error, Please try again later.</string>
    <string name="fromdate">From Date</string>
    <string name="toDate">To Date</string>
    <string name="select_from_date">Select From Date</string>
    <string name="select_to_date">Select To Date</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="time_out">Time Out</string>
    <string name="server_error">Server Error</string>
    <string name="unable">Couldn\'t  process request.</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="invalid_amout">Please Enter Valid Amount</string>

</resources>
