<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context="com.zemulla.android.app.user.ChangePasswordActivity">

    <include layout="@layout/app_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical"
        android:padding="@dimen/dimen_16dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp">

            <EditText
                android:id="@+id/oldEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:hint="@string/hint_old_email"
                android:inputType="textWebEmailAddress"
                android:textColor="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp">

            <EditText
                android:id="@+id/newEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:hint="@string/hint_new_email"
                android:inputType="textWebEmailAddress"
                android:textColor="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp">

            <EditText
                android:id="@+id/currentPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:hint="@string/hint_current_password"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:background="@color/colorPrimaryDark"
            android:text="Submit"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>
